# langgraph-memory-inspector

./: .gitignore  CONTRIBUTING.md  PROJECT_PLAN.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  checkpoint_bug_pattern.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  community_launch_playbook.md  demo_script.md  development_prompts.md  diagnostic_matrix.md  feedback_intake_playbook.md  fixture_policy.md  langchain_forum_launch_post.md  launch_dry_run_2026-05-30.md  launch_plan.md  maintainer_notes.md  maintainer_strategy.md  mvp_checklist.md  postgres_adapter_plan.md  product_spec.md  public_launch_packet.md  quickstart_audit_2026-05-29.md  release_candidate_audit_2026-05-29.md  release_checklist.md  release_notes_v0.1.0.md  resume_project.md  social_preview_upload_guide.md  use_case_test_report.md  user_value.md
docs/assets/: stale-memory-debugging-demo.webm
examples/relocation_policy_agent/: README.md  run_demo.py
scripts/: feedback_intake.py  issue_bundle_smoke.py  launch_status.py  package_smoke.py  postgres_confidence.py  release_smoke.py  use_case_smoke.py  validate_launch_copy.py  validate_social_preview.py
src/lgmi/: __init__.py  adapters.py  analysis.py  api.py  bundle_audit.py  causal_chain.py  checkpoint_reader.py  cli.py  export_bundle.py  postgres_reader.py  use_case_smoke.py
tests/: test_analysis.py  test_api.py  test_checkpoint_reader.py  test_cli.py  test_export_bundle.py  test_feedback_intake.py  test_fixtures.py  test_issue_bundle_smoke.py  test_launch_copy.py  test_launch_status.py  test_package_smoke.py  test_postgres_confidence.py  test_postgres_reader.py  test_project_metadata.py  test_release_smoke.py  test_social_preview.py  test_use_case_smoke.py
tests/fixtures/: README.md
tests/fixtures/synthetic/: message_history_bloat.json  namespace_confusion_multi_ns.json  rag_stale_retrieved_context.json  reducer_append_duplicate_memory.json  repeated_retrieved_context.json  unexpected_parent_checkpoint.json
web/: index.html  package-lock.json  package.json  playwright.config.ts
web/src/: App.tsx  styles.css  types.ts
web/src/api/: client.ts  mockData.ts
web/src/components/: CheckpointDetail.tsx  Chrome.tsx  DiagnosticsPanel.tsx  ThreadSelector.tsx  Timeline.tsx
web/tests/: diagnostics.spec.ts
