[project]
name = "langgraph-memory-inspector"
version = "0.1.0"
description = "Local-first DevTools for debugging LangGraph checkpoints and agent memory."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = [
    "agent-memory",
    "checkpoint-debugging",
    "developer-tools",
    "langgraph",
    "llmops",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "fastapi>=0.136.3",
    "langchain-openai>=0.3.0",
    "langgraph>=0.6.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "rich>=13.9.0",
    "uvicorn>=0.48.0",
]

[project.scripts]
lgmi = "lgmi.cli:main"

[project.urls]
Homepage = "https://github.com/fengjikui/langgraph-memory-inspector"
Repository = "https://github.com/fengjikui/langgraph-memory-inspector"
Issues = "https://github.com/fengjikui/langgraph-memory-inspector/issues"
Documentation = "https://github.com/fengjikui/langgraph-memory-inspector#readme"

[project.optional-dependencies]
postgres = [
    "langgraph-checkpoint-postgres>=3.0.0",
    "psycopg[binary]>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/lgmi"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
markers = [
    "integration: tests that require external services such as Postgres",
]
